# Internship

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.gradio  README.md  app.py  docker-compose.yaml  main.py  pyproject.toml
rag_chroma_db/: chroma.sqlite3
rag_pipeline/: prompt_templates.txt  prompt_templates_oneline.txt  rag.py  redis_rag.py  reranker.py
rag_pipeline/rag_chroma_db/: chroma.sqlite3
recipe_system/: recipe.py
routes/: rag_routes.py  recipe_routes.py
scripts/: waitforservice.sh
src/: handsonPydantic.py  learnAPI.py
